@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 
-# $Id: shrinkdbm.pl,v 1.1.2.1.2.2 2005-01-07 13:59:57 rurban Exp $
+# $Id: shrinkdbm.pl,v 1.1.2.1.2.3 2005-01-07 14:02:27 rurban Exp $
 
 # shrink a DBM file
 # Steve Wainstead, July 2000
