@@ -3,7 +3,7 @@
 <title>Importing phpwiki 1.0.x dbm files</title>
 </head>
 <body bgcolor="navajowhite">
-<!-- $Id: wiki_port1_0.php,v 1.1.2.1.2.2 2005-01-07 13:59:57 rurban Exp $ -->
+<!-- $Id: wiki_port1_0.php,v 1.1.2.1.2.3 2005-01-07 14:02:27 rurban Exp $ -->
 
 <?php
    function port1_0RenderHash($dbi, $dbmh, $pagename) {
